web-infras/parser/tests/fixtures/babel/es2015/uncategorised/345/output.txt
[SyntaxError]: getter functions must have no arguments (1,15)
1|class A { get prop(x) {} }
 |             ^
